[package]
name = "crush"
version = "0.1.0"
edition = "2021"
author = "Rolf Kreibaum"
license = "MIT or Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
clap = "4.5.4"
clap_derive = "4.5.4"

# Make this run fast in debug mode by compiling dependencies with optimizations
[profile.dev.package."*"]
opt-level = 3
